News UAT/force-app/main/default/objects/User_Announcement_Status__c/User_Announcement_Status__c.object-meta.xml
<CustomObject>
    <label>User Announcement Status</label>
    <nameField>
        <displayFormat>UAS-{0000}</displayFormat>
        <label>Announcement Status</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Announcement Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>