News UAT/force-app/main/default/objects/User_Announcement_Status__c/fields/Actioned_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Actioned_Timestamp__c</fullName>
    <label>Actioned Timestamp</label>
    <type>DateTime</type>
</CustomField>