News UAT/force-app/main/default/objects/User_Announcement_Status__c/fields/Announcement__c.field-meta.xml
<CustomField>
    <fullName>Announcement__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Announcement</label>
    <referenceTo>Business_Announcement__c</referenceTo>
    <relationshipLabel>User Announcement Statuses</relationshipLabel>
    <relationshipName>User_Announcement_Statuses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>