News UAT/force-app/main/default/objects/User_Announcement_Status__c/fields/Display_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Display_Timestamp__c</fullName>
    <label>Display Timestamp</label>
    <type>DateTime</type>
</CustomField>