News UAT/force-app/main/default/objects/User_Announcement_Status__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Announcement__c</columns>
    <columns>User__c</columns>
    <columns>Status__c</columns>
    <columns>Display_Timestamp__c</columns>
    <columns>Actioned_Timestamp__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>